<resources>
    <string name="app_name">Simple Multi Apps</string>
    //Themes
    <string name="one_theme">Basic</string>
    <string name="two_theme">Blue</string>
    <string name="three_theme">Orange 1</string>
    <string name="four_theme">Orange 2</string>
    <string name="five_theme">Fuchsia</string>
    <string name="six_theme">Pink</string>
    <string name="seven_theme">Brown</string>
    <string name="eight_theme">Red</string>
    <string name="nine_theme">Green</string>
    <string name="gradual_one_theme">Gradual 1</string>
    <string name="gradual_two_theme">Gradual 2</string>
    <string name="gradual_three_theme">Gradual 3</string>
    <string name="gradual_four_theme">Gradual 4</string>
    <string name="gradual_five_theme">Gradual 5</string>
    <string name="gradual_six_theme">Gradual 6</string>
    <string name="gradual_seven_theme">Gradual 7</string>
    //Candy Crush
    <string name="candy_crush_game">Candy Crush Game</string>
    //Joke
    <string name="joke">Joke</string>
    <string name="programming">Programming</string>
    <string name="first_line">First Line"</string>
    <string name="second_line">Second Line"</string>
    <string-array name="values">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Five</item>
        <item>Sex</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>Twelve</item>
        <item>Thirteen</item>
        <item>Fourteen</item>
        <item>Fifteen</item>
    </string-array>
    //Stop Watch
    <string name="stop_watch">Stop Watch</string>
    //Random Image Generating
    <string name="random_image_generating">Random Image Generating</string>
    <string name="image_info">Image Info</string>
    //Web App
    <string name="web_app">Web App</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="web_site">WebSite</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    //Live TV
    <string name="live_tv">Live TV</string>
    //Blogger
    <string name="none_display">There are no items to display</string>
    <string name="categories">Categories</string>
    <string name="post_details">Post Details</string>
    <string name="blogger_pages">Tip Top Pages</string>
    <string name="page_details">Page Details</string>
    <string name="blogger_name">Tip Top Blogger</string>
    <string name="search">Search</string>
    <string name="load_more">Load More</string>
    <string name="labels">Labels</string>
    <string name="comments">Comments</string>
    <string name="publish_info">By %1$s %2$s</string>
    //News App
    <string name="news_app">News App</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    //Pdf Reader
    <string name="pick_file">Pick File</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="toast_http_code_error">Remote server responded with an error.</string>
    <string name="toast_generic_download_error">We couldn\'t download this file for some reason.</string>
    <string name="toast_ssl_error">Secure connection failed.</string>
    <string name="saved_to_download">File saved to Download folder.</string>
    <string name="save_to_download_failed">Couldn\'t save file to Download folder.</string>
    <string name="intro">Replay Intro</string>
    <string name="ok">Ok</string>
    <string name="title_permission">Storage Permissions</string>
    <string name="description__permission">You will now be prompted to allow the app to access the phone\'s storage. Without this permission, documents might fail to open in some cases.</string>
    <string name="share_file">Share File</string>
    <string name="print">Print File</string>
    <string name="full_screen">Full Screen</string>
    <string name="meta">File Info</string>
    <string name="pdf_title">Title: %1$s</string>
    <string name="pdf_author">Author: %1$s</string>
    <string name="pdf_creation_date">Creation Date: %1$s</string>
    <string name="file_opening_error">An error occurred while opening the file.</string>
    <string name="protected_pdf">Protected PDF</string>
    <string name="enter_password">Enter the correct password to open the document:</string>
    <string name="wrong_password">Wrong password.</string>
    //Wordpress
    <string name="wordpress_app">Wordpress App</string>
    <string name="favorites">Favorites</string>
    <string name="progressdialog_title">Please wait...</string>
    <string name="progressdialog_message">Loading...</string>
    <string name="add_as_favorite">add</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="close">Close</string>
    <string name="channel_name">CHANNEL NAME</string>
    <string name="textview">TextView</string>
    <string name="no_data_found">No Data Found</string>
    <string name="channel_info">Channel Info</string>
    <string name="channel_description">Channel Description</string>
    <string name="news_channel">News Channel</string>
    <string name="more">More</string>
    <string name="entertainment_channel">Entertainment Channel</string>
    <string name="sports_channel">Sports Channel</string>
    <string name="temperament">Temperament</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="more_info">More Info</string>
    <string name="no_more_posts">No more posts...</string>
    <string name="reached_end_of_page">Reached end of page...</string>
    <string name="selected">%1$s Selected</string>
    <string name="you_clicked">You Clicked %1$s</string>
    <string name="error">Error!</string>
    <string name="news_details_unavailable">News details are unavailable</string>
    <string name="fetching_news">Fetching news Articles...</string>
    <string name="fetching_news_of">Fetching news Articles of %1$s</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="request_failed">Request Failed!</string>
    <string name="zero_time">00:00:00</string>
    <string name="last_time_label">Last Time : </string>
    <string name="score_label">Score - </string>
    <string name="zero_score">0000</string>
    <string name="zero">0</string>
    <string name="data_not_found">Data Not Found.</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="connect_internet">Can\'t connect to the Internet</string>
</resources>